2017-05-13  Bastian Maerkisch  <bmaerkisch@web.de>

	Backport fixes from 5.1:

	* src/win/wgdiplus.cpp:
	Graphics::MeasureString did not take trailing spaces into account.
	Off-by-one error in mapping of graph coordinates.
	Fix memory leak in SetFont_gdiplus.

	* src/win/wgraph.c:
	(drawgraph) Off-by-one error in mapping of graph coordinates.
	(CopyClip) Only attempt to set clipboard data if the bitmap/metafile
	handle is valid.  Emit an error message otherwise.
	(SaveAsEMF) Tweak flags for GetSaveFileName() to make sure that the
	file/path is not read-only and to preserve the current working
	directory.
	(WndGraphProc): Remove dead code in mouse handling: Single and double
	clicks are handled by the code in mouse.c and the window is not even
	configured to receive double click events.  Also make sure that mouse
	wheel "button"s are released again.

2017-05-08  Ethan A Merritt  <merritt@u.washington.edu>

	* term/cairo.trm:
	In order to scale up an existing plot uniformly, e.g. for printing
	a poster-size PostScript or PDF file, it is convenient to be able to
	give the scale factor in the "set term" command.  We already offer
	"set term ... {linewidth <factor>} {fontscale <factor>}".  This patch
	adds "set term ... {pointscale <factor>}" to scale up pointsize for
	cairo terminals.

2017-05-02  Ethan A Merritt  <merritt@u.washington.edu>

	* term/canvas.trm:  Fix incorrect initialization of axis width/height.
	Bug #1925

	* term/js/gnuplot_mouse.js:  Work-around for plots that were generated
	prior to the above fix.  You can use this mousing code even if the plots
	being moused contain the initialization error.
	Bug #1925

2017-04-19  Ethan A Merritt  <merritt@u.washington.edu>

	* src/wxterminal/gp_cairo.cpp (gp_cairo_boxed_text): Scale linewidth of
	textbox border by the current terminal linewidth setting.
	Bug #1825

2017-04-19  Bastian Maerkisch  <bmaerkisch@web.de>

	* configure.in docs/Makefile.am:  Some systems allow for parallel